# growth-cro

./: .env.example  .gitignore  .mcp.json  CAPABILITIES_REGISTRY.json  CAPABILITIES_SUMMARY.md  CLAUDE.md  DESIGN_DOC_V26_AA.md  Dockerfile  FRAMEWORK_CADRAGE_GSG_V26AC.md  PLAN_GrowthCRO_Challenge_Codex_GPT.md  README.md  START_HERE_NEW_SESSION.md  STRATEGIC_AUDIT_AND_ROUTING_2026-05-04.md  add_client.py  api_server.py  capture_full.py  docker-compose.yml  enrich_client.py  ghost_capture_cloud.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_enricher.sh  state.py
.claude/: CLAUDE.md  README.md  settings.json
.claude/agents/: capabilities-keeper.md  capture-worker.md  doctrine-keeper.md  reco-enricher.md  scorer.md
.claude/commands/: audit-client.md  doctrine-diff.md  full-audit.md  pipeline-status.md  score-page.md
.claude/memory/: MEMORY.md  project_growthcro_v152_semantic_scorer_plan.md  project_growthcro_v26_aa.md
.claude/prds/: codebase-cleanup.md  growthcro-stratosphere-p0.md  gsg-creative-renaissance.md  hardening-and-skills-uplift.md  micro-cleanup-sprint.md  post-stratosphere-roadmap.md  simplify-sprint-1-2-followup.md  skill-stratosphere-2026-05-integration.md  typing-strict-rollout.md  webapp-clients-audits-recos.md  webapp-consolidate-architecture.md  webapp-data-fidelity-and-skills-stratosphere-2026-05.md  webapp-full-buildout.md  webapp-gsg-studio.md  webapp-rich-ux-and-screens.md  (+7 more)
SCHEMA/: README.md  bloc_v3.schema.json  client_intent.schema.json  clients_database.schema.json  dashboard_v17_data.schema.json  perception_v13.schema.json  recos_enriched.schema.json  score_page_type.schema.json  score_pillar.schema.json  validate.py  validate_all.py
_archive/: README.md
architecture/: GROWTHCRO_ARCHITECTURE_V1.md  GSG_CANONICAL_CONTRACT_V27_2026-05-05.md  GSG_RECONSTRUCTION_SPEC_V27_2_2026-05-06.md  REALITY_LAYER_PILOT_V26AI_2026-05-05.md  REFONTE_TOTAL_TRACKER_2026-05-05.md  WEBAPP_V27_COMMAND_CENTER_2026-05-05.md
data/: .zone_rescore_done.txt  _test_listicle_V26AE_log.txt  clients_database.json  clients_database_schema_v143.json  curated_clients_v26.json  curated_clients_v27.json  geo_query_bank.json  growth_refs.json
deliverables/: GrowthCRO-V26-WebApp.html  GrowthCRO-V27-CommandCenter.html  architecture-explorer-data.js  architecture-explorer.html  weglot-VANILLA-CLAUDE-CHAT.html  weglot-listicle-V26AD-PLUS-FULL-STACK.html  weglot-listicle-V26AE-FINAL.html  weglot-lp_listicle-GSG-CONTROLLED-V27.html  weglot-lp_listicle-GSG-DOCTRINE-BRAND-V27-1.html  weglot-lp_listicle-GSG-V27-2C-TRUE.html  weglot-lp_listicle-V26AG-MODE1-ROLLBACK.html  weglot-lp_listicle-V26AH-MINIMAL.html
growthcro/: README.md  SKILLS_REGISTRY_GOVERNANCE.json  __init__.py  config.py
memory/: CONTENT_INPUT_DOCTRINE.md  FINAL_ACCEPTANCE_TEST_TODO.md  HISTORY.md  SPECS.md  SPRINT_LESSONS.md  project_growthcro_golden_dataset_plan.md  project_growthcro_v26_af.md
moteur_gsg/: README.md  __init__.py  orchestrator.py
moteur_multi_judge/: __init__.py  orchestrator.py  persist.py
playbook/: AXIOMES.md  LEARNINGS.md  README.md  ab_angles.json  anti_patterns.json  bloc_1_hero_v3-3.json  bloc_1_hero_v3.json  bloc_2_persuasion_v3-3.json  bloc_2_persuasion_v3.json  bloc_2_sources.md  bloc_3_ux_v3-3.json  bloc_3_ux_v3.json  bloc_4_coherence_v3-3.json  bloc_4_coherence_v3.json  bloc_5_psycho_v3-3.json  bloc_5_psycho_v3.json  bloc_5_sources.md  bloc_6_tech_v3-3.json  bloc_6_tech_v3.json  bloc_utility_elements_v3-3.json  bloc_utility_elements_v3.json  doctrine_integration_matrix.json  doctrine_integration_status.md  guardrails.json  killer_rules.json  multi_page_audit.json  page_type_criteria.json  prerequisites.json  reco_mapping.json  reco_schema.json  thresholds_benchmarks.json  usp_preservation.json
reports/: CODE_AUDIT_2026-05-11.md  RECO_QUALITY_AUDIT_V26AH_2026-05-04.md  SKILLS_STRATOSPHERE_DISCOVERY_2026-05-11.md
scripts/: _test_weglot_listicle_V26AE.py  a11y_audit.js  agent_smoke_test.sh  audit_capabilities.py  audit_skills_governance.py  build_architecture_explorer.py  build_audit_to_gsg_brief.mjs  build_bloc_v3_3.py  check_gsg_canonical.py  check_gsg_component_planner.py  check_gsg_controlled_renderer.py  check_gsg_creative_route_selector.py  check_gsg_intake_wizard.py  check_gsg_visual_renderer.py  client_context.py  compare_doctrine_v3_v3_3.py  doctrine.py  enrich_v143_public.py  lint_code_hygiene.py  migrate_disk_to_supabase.py  migrate_v27_to_supabase.py  parity_check.sh  perf_audit.js  precategorize_proposals.py  qa_gsg_html.js  reco_enricher_v13.py  reco_enricher_v13_api.py  run_gsg_full_pipeline.py  screenshot_html.js  seed_supabase_test_data.py  site_intelligence.py  test_agency_audits.py  test_gsg_regression.sh  test_webapp_v27.py  typecheck.sh  update_architecture_explorer.py  update_architecture_map.py  upload_screenshots_to_supabase.py
supabase/: README.md
webapp/: .env.example  .gitignore  README.md  microfrontends.json  package-lock.json  package.json  playwright.config.ts  tsconfig.base.json  vercel.json
(+1324 files in other folders)
